# Kathakaar

./: .gitignore  CINEMATIC_NOTES.md  CONTRIBUTING.md  DEPLOY_KATHAKAAR.md  KATHAKAAR_DEPLOY_GUIDE.md  LICENSE  Makefile  README.md  ReadMe.md  SHIP_TODAY.md  finalprojectsubmission.ipynb  pyproject.toml  restorator.ipynb  sandpaper (2).py  sandpaper.py
.github/workflows/: ci.yml
benchmarks/grounding_v1/: README.md  corpus.jsonl  queries.jsonl
benchmarks/grounding_v2/: README.md  corpus.jsonl  queries.jsonl
benchmarks/multimodal_v3/: README.md  queries.jsonl
docs/: ARCHITECTURE_V3.md  DEMO_ROADMAP.md  TRAINING_STRATEGY.md  app.mjs  engine.mjs  engine.test.mjs  index.html  linter.html  styles.css
docs/evaluation/: adversarial_v3.md  grounding_v1.md  multimodal_v3.md  refusal_v1.md
knowledge/: kathakaar_v3.jsonl
knowledge/source_snapshots/: official_collections_2026-06-13.jsonl
scripts/: build_grounding_v2.py  build_knowledge_v3.py  demo.py
src/kathakaar/: __init__.py  __main__.py  cli.py  consistency.py  (+10 more)
src/kathakaar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
studio/: Dockerfile  Makefile  README.md  docker-compose.yml  render.yaml  requirements.txt
tests/: test_cli.py  test_evaluation.py  test_generation.py  test_knowledge.py  test_multimodal.py  test_rag.py  test_retrieval.py  test_statistics.py  test_storage.py
training/: README.md  kathakaar_img2vid.ipynb  kathakaar_lora_sdxl.ipynb  kathakaar_narration_lora.ipynb  narration_style_dataset.jsonl
web-app/: .env.example  .gitignore  README.md  index.html
(+29 files in other folders)
