[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kathakaar"
version = "0.3.0"
description = "Provenance-first multimodal cultural retrieval and grounded storytelling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
multimodal = [
    "pillow>=10.4",
    "torch>=2.3",
    "transformers>=4.45",
]
production = [
    "psycopg[binary]>=3.2",
]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
kathakaar = "kathakaar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
